<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="2">
  <name>volleyball_communication</name>
  <version>0.0.1</version>
  <description>2026 Robocon排球赛 ROS2上位机-下位机球点(x/y/yaw)通讯包</description>
  <maintainer email="bbpp@todo.todo">your_name</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>setuptools</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>

  <!-- 核心依赖：ROS2 C++/Python/浮点数组消息 -->
  <depend>rclcpp</depend>
  <depend>rclpy</depend>
  <depend>std_msgs</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
